- Adjust layout and size of elements in the left panel. - Prevent validation of incorrect test results.

--- a/src/app/components/console/console.html
+++ b/src/app/components/console/console.html
@@ -1,5 +1,5 @@
-<div class="flex-none min-h-0">
-  <textarea class="w-full h-full bg-black text-green-400 font-mono p-3 text-sm 
+<div class="flex flex-col h-full min-h-0 overflow-hidden">
+  <textarea class="w-full h-full bg-black text-green-400 font-mono p-3 text-xs 
            resize-none rounded-xl outline-none overflow-auto"
     readonly
     placeholder="Console"
