Add a "Tester" button in the editor for student to submit their files.
- Updated models to easily reuse them

- Overall improvement of the code

--- a/src/app/pages/exercise-run/exercise-run.html
+++ b/src/app/pages/exercise-run/exercise-run.html
@@ -22,6 +22,8 @@
                 [options]="options"
                 [inputFiles]="files"
                 (consoleMessage)="onConsoleMessage($event)"
+                (filesChange)="onFilesChange($event)"
+                (studentSend)="OnStudentSend()"
             ></app-editor>
         </div>
 
