--- a/src/app/components/editor/editor.html
+++ b/src/app/components/editor/editor.html
@@ -48,6 +48,14 @@
         (click)="onCompile()">
         Compilation
       </button>
+    } 
+    @if (options.canTest) {
+      <button
+        type="button"
+        class="px-3 py-1 text-sm font-mono rounded-t-xl bg-gray-700 text-white hover:bg-gray-600 border-b-2"
+        (click)="onStudentSend()">
+        Tester
+      </button>      
     }
     </div>
   </div>
