--- a/src/app/components/console/console.html
+++ b/src/app/components/console/console.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col h-full min-h-0 overflow-hidden">
   <textarea class="w-full h-full bg-black text-green-400 font-mono p-3 text-xs 
-           resize-none rounded-xl outline-none overflow-auto"
+           resize-none rounded-b-xl outline-none overflow-auto"
     readonly
     placeholder="Console"
     [value]="text"
