--- a/src/app/components/testsDisplay/tests-display/tests-display.html
+++ b/src/app/components/testsDisplay/tests-display/tests-display.html
@@ -1,7 +1,7 @@
 <div class="h-full w-full overflow-y-auto overflow-x-auto bg-gray-900 p-4">
 
     <!--If no test available-->
-    @if (!tests || tests.length === 0) {
+    @if (!testsDisplay || testsDisplay.length === 0) {
     <div class="flex h-full flex-col items-center justify-center space-y-3 text-white">
         <span class="text-sm">Aucun test disponible.</span>
     </div>
@@ -18,7 +18,7 @@
         <div class="col-span-2 text-center">État</div>
         </div>
 
-        @for (test of tests; track test.id) {
+        @for (test of testsDisplay; track test.id) {
         <div class="grid grid-cols-12 gap-4 items-center rounded-lg border border-gray-800 bg-gray-800/40 px-4 py-3 text-sm ">
             
             <div class="col-span-1 flex justify-center">
