Student can do the exercise now

--- a/src/app/pages/exercise-run/exercise-run.html
+++ b/src/app/pages/exercise-run/exercise-run.html
@@ -23,7 +23,7 @@
                 [inputFiles]="files"
                 (consoleMessage)="onConsoleMessage($event)"
                 (filesChange)="onFilesChange($event)"
-                (studentSend)="OnStudentSend()"
+                (studentSend)="onSubmitStudentCode()"
             ></app-editor>
         </div>
 
@@ -82,7 +82,7 @@
 
             @case ('tests') {
                 <app-tests-display
-                    [tests]="tests"
+                    [testsDisplay]="tests"
                 ></app-tests-display>
             }
 
