--- a/src/app/components/hints/hints.html
+++ b/src/app/components/hints/hints.html
@@ -1,5 +1,5 @@
 <div>
-  <h3 class="text-lg font-bold text-gray-800 mb-3">Indices</h3>
+  <h3 class="text-lg font-bold text-white mb-3">Indices</h3>
 
   <div class="flex flex-col gap-2 mb-3">
     <!--Create autant de row hint -->
@@ -7,14 +7,14 @@
       <div class="flex items-center gap-2 mb-2">
         <input type="text" placeholder="Écrire un indice..."
           class="w-2/3 p-2 border border-gray-300 rounded-xl text-sm 
-                 outline-none focus:border-gray-800"
+                 outline-none text-white"
           [(ngModel)]="hint.body"
           [readonly]="hint.validated"
         />
 
         <input type="number" placeholder="Nb essais" min="1"
           class="w-1/3 p-2 border border-gray-300 rounded-xl text-sm 
-                 outline-none focus:border-gray-800 text-center"
+                 outline-none text-white text-center"
           [(ngModel)]="hint.unlock_after_attempts"
           [readonly]="hint.validated"
         />
@@ -28,7 +28,7 @@
     }
   </div>
 
-  <button type="button" class="text-sm text-gray-800 font-semibold flex items-center gap-1" (click)="addHint()">
+  <button type="button" class="text-sm text-white font-semibold flex items-center gap-1" (click)="addHint()">
     + Ajouter un autre indice
   </button>
 
