--- a/src/app/components/course-display/course-display.html
+++ b/src/app/components/course-display/course-display.html
@@ -38,7 +38,7 @@
           @for (exo of course.exercises; track exo.id) {
             
             <a [routerLink]="['/unit', unitId, 'course', course.id, 'exercise', exo.id]"
-               class="group flex items-center justify-between px-4 py-3 rounded-lg bg-gray-700/80 border border-gray-500/80">
+               class="group flex items-center justify-between px-4 py-2 m-0.5 rounded-lg bg-gray-700/80 border border-gray-500/80">
               
               <div class="flex items-center">
                 
@@ -48,6 +48,19 @@
                 </span>
               </div>
 
+              <button (click)="onDeleteExerciseClick(course.id, exo.id, $event)" 
+               class="group/del p-2 rounded transition-colors ml-2 cursor-pointer"
+               title="Supprimer le cours">
+           
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" 
+                      class="w-4 h-4 text-gray-300 group-hover/del:text-red-500 transition-colors cursor-pointer">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                </svg>
+
+
+              </button>
+                      
+
 
             </a>
 
@@ -55,7 +68,13 @@
             <div class="text-center text-xs text-gray-300 py-4">
               Ce cours ne contient pas encore d'exercices.
             </div>
+
           }
+
+          <a [routerLink]="['/exercise-create', unitId, course.id]"
+              class="block mt-2 mx-10 mb-2 py-3 rounded-lg border-2 border-dashed border-gray-300 text-gray-300 hover:bg-gray-700/50 transition-all text-center text-sm font-bold cursor-pointer no-underline">
+                + Ajouter un exercice
+          </a>
         </div>
 
       </div>
