--- a/src/app/pages/exercise-create/exercise-create.html
+++ b/src/app/pages/exercise-create/exercise-create.html
@@ -95,7 +95,7 @@
 
         <div class="flex gap-2">
           <button 
-           class="w-full py-3 bg-gray-700 text-white font-bold rounded-xl  hover:bg-gray-700 "
+           class="w-full py-3 bg-gray-700 text-white font-bold rounded-xl  hover:bg-gray-400 cursor-pointer"
            (click)="onCreateExercise()">
               CRÉER
           </button>
