Added java and python language

--- a/src/app/pages/exercise-create/exercise-create.html
+++ b/src/app/pages/exercise-create/exercise-create.html
@@ -48,6 +48,8 @@
                 [(ngModel)]="language"
                 >
                 <option value="c">C</option>
+                <option value="java">Java</option>
+                <option value="python">Python</option>
                 </select>
             </div>
 
