Lot of changes : - Possibility to modify a unit, course and exercise directly in the front - Creation of the dashbord page (not complete) - Fix a lot of bugs (In the editor, create-course, etc...)

--- a/src/app/components/editor/editor.html
+++ b/src/app/components/editor/editor.html
@@ -16,6 +16,7 @@
                     border-b border-transparent"
             [value]="file.extension ? file.name + '.' + file.extension : file.name"
             [readonly] = "!options.canRenameFiles"
+            (click)="setActiveFile(file)"
             (blur)="onNameChange(file, nameInput.value)"
             (keydown.enter)="$event.preventDefault(); nameInput.blur()"
             />
